--- a/Furnishare/package.json
+++ b/Furnishare/package.json
@@ -10,15 +10,16 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@ui-kitten/components": "^5.1.1",
+    "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~44.0.0",
     "expo-camera": "~12.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-maps": "0.29.4",
     "react-native-svg": "^12.1.1",
-    "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
