--- a/Furnishare/package.json
+++ b/Furnishare/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/stack": "^6.1.0",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~44.0.0",
@@ -17,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-maps": "0.29.4",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1"
