--- a/Furnishare/package.json
+++ b/Furnishare/package.json
@@ -23,9 +23,10 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-maps": "0.29.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "expo-location": "~14.0.1"
+    "expo-location": "~14.0.1",
+    "expo-linear-gradient": "~11.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
